--- a/index.html
+++ b/index.html
@@ -4,49 +4,21 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+  <script src="js/jquery.js"></script>
+  <script src="js/angular.js"></script>
   <script src="js/semantic.js"></script>
   <link rel="stylesheet" type="text/css" href="css/semantic.css">
+  <link rel="stylesheet" type="text/css" href="css/core.css">
   <title>Angular</title>
 </head>
-<body>
+<body ng-app="workout" ng-controller="root">
 
-
-<form class="ui fluid form">
-  <div class="two fields">
-    <div class="field">
-      <input type="text" placeholder="First name">
-      <div class="ui pointing label">
-        Pointing Label
-      </div>
-    </div>
-    <div placeholder="Last Name" class="field">
-      <div class="ui pointing below label">
-        Pointing below label
-      </div>
-      <input type="text">
-    </div>
+  <div ng-repeat="item in exercises | orderBy: '-calories'">
+  	{{item.name}} | {{item.calories}} calories
   </div>
-</form>
 
-<!--
-<div ng-app="" ng-controller="customersController"> 
+  <button ng-click="addExercise()" class="ui blue basic button">Add</button>
 
-<ul>
-  <li ng-repeat="x in names">
-    {{ x.Name + ', ' + x.Country }}
-  </li>
-</ul>
-
-</div>
-
-<script>
-function customersController($scope,$http) {
-    $http.get("http://www.w3schools.com/website/Customers_JSON.php")
-    .success(function(response) {$scope.names = response;});
-}
-</script>
--->
+<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
