--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <script src="js/jquery.js"></script>
-  <script src="js/angular.js"></script>
-  <script src="js/semantic.js"></script>
-  <link rel="stylesheet" type="text/css" href="css/semantic.css">
-  <link rel="stylesheet" type="text/css" href="css/core.css">
+  <link rel="import" href="headers.html">
   <title>Angular</title>
 </head>
 <body ng-app="workout" ng-controller="root">
@@ -17,7 +10,18 @@
   	{{item.name}} | {{item.calories}} calories
   </div>
 
-  <button ng-click="addExercise()" class="ui blue basic button">Add</button>
+  <form ng-submit="addExercise()" class="ui form segment">
+    <div class="inline field">
+      <label>Exercise</label>
+      <input type="text" placeholder="Exercise" ng-model="exercise"/>
+    </div>
+    <div class="inline field">
+      <label>Calories</label>
+      <input type="text" placeholder="Calories" ng-model="calories"/>
+    </div>
+    <button type="submit" class="ui submit button">Add</button>
+  </form>
+
 
 <script type="text/javascript" src="js/app.js"></script>
 </body>
